# PracticalProjectKBS

./: .env.example  .gitignore  README.md  pyproject.toml
data/benchmark/: benchmark.json
results/: final_report.md
results/baseline_cot/: medqa_results.json  medqa_summary.json  pubmedqa_results.json  pubmedqa_summary.json
results/bm25_pubmed/: medqa_k16_results.json  medqa_k16_summary.json  medqa_k32_results.json  medqa_k32_summary.json  medqa_k4_results.json  medqa_k4_summary.json  medqa_k8_results.json  medqa_k8_summary.json
results/bm25_statpearls/: medqa_k16_results.json  medqa_k16_summary.json  medqa_k32_results.json  medqa_k32_summary.json  medqa_k4_results.json  medqa_k4_summary.json  medqa_k8_results.json  medqa_k8_summary.json
results/test_baseline/: medqa_results.json  medqa_summary.json
scripts/: quick_test.py  run_experiments.py
src/: __init__.py  analysis.py  config.py  corpus_downloader.py  data_loader.py  experiment.py  llm.py  retrieval.py  templates.py
